--- a/check/Makefile
+++ b/check/Makefile
@@ -3,10 +3,10 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: mtoia <mtoia@student.42.fr>                +#+  +:+       +#+         #
+#    By: mardolin <mardolin@student.42.fr>          +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/29 16:19:49 by mtoia             #+#    #+#              #
-#    Updated: 2022/11/04 15:34:57 by mtoia            ###   ########.fr        #
+#    Updated: 2022/11/04 16:16:44 by mardolin         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -25,7 +25,7 @@ IND = 0
 PER = 0
 
 SRC = get_next_line/get_next_line.c get_next_line/get_next_line_utils.c checker.c check.c utils.c \
-		push_moves.c rev_rot_moves.c rotate_moves.c swap_moves.c
+		push_moves.c rev_rot_moves.c rotate_moves.c swap_moves.c utils_n.c checker_utils.c
 
 HDRS = checker.c
 
